manifests/prod/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: app-uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
